<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Titles -->
    <string name="app_name">学生信息录入</string>

    <!-- Tel info -->
    <string name="tel_number">电话</string>
    <string name="tel_province">归属地</string>
    <string name="tel_host">运营商</string>
    <!--Student attributes-->
    <string name="label_stu_img">头像</string>
    <string name="label_stu_name">姓名</string>
    <string name="label_stu_id">学号</string>
    <string name="label_stu_sex">性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="label_stu_colleague">学院</string>
    <string name="label_stu_major">专业</string>
    <string name="label_stu_birthday">生日</string>
    <string name="description">好友简介</string>

    <!--UI info-->
    <string name="please_choose">请选择</string>
    <string name="please_input">请输入</string>
    <string name="confirm">确认</string>
    <string name="clear_filter">清除筛选</string>
    <string name="cancel">取消</string>
    <string name="error">错误</string>
    <string name="success">成功</string>
    <string name="copy" tools:ignore="PrivateResource">复制</string>
    <string name="query">查询</string>
    <string name="login">登录</string>
    <string name="user_id">账户名</string>
    <string name="user_pwd">密码</string>
    <string name="add">添加</string>
    <string name="menu">菜单</string>
    <string name="redo">重做</string>
    <string name="undo">撤销</string>
    <string name="load_data">导入信息</string>
    <string name="refresh">刷新</string>
    <string name="search">搜索</string>
    <string name="edit">编辑</string>
    <string name="remove">删除</string>
    <string name="now_loading">正在处理……</string>
    <string name="title_activity_config">用户设置</string>

    <!--  painting  -->
    <string name="pen_size">画笔大小</string>
    <string name="pen_color">画笔颜色</string>
    <string name="pen">画笔</string>
    <string name="eraser">橡皮</string>

    <!--  temp  -->
    <string name="temp_symbol">℃</string>
    <string name="future_weather">未来5天天气情况</string>


</resources>
