<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.acetering.app.FragmentStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_stu_name"
            style="@style/common_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_stu_name"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/InputBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/border_input_box"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|text"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_stu_id"
            style="@style/common_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_stu_id"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/InputBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/border_input_box"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_stu_id"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_sex"
            style="@style/common_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_stu_sex"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/InputBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioGroup
                android:id="@+id/select_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:textAlignment="center">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="start|center_horizontal|center_vertical"
                    android:text="@string/sex_male"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_horizontal|center_vertical"
                    android:text="@string/sex_female"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/common_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_stu_birthday"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/InputBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/border_input_box"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/input_stu_birthday"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                tools:text="@string/please_choose" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/label_colleague"
            style="@style/common_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_stu_colleague"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/InputBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="5dp">

            <Spinner
                android:id="@+id/select_colleague"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/colleague_list"
                android:scrollbarSize="4dp"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/label_major"
            style="@style/common_text_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_stu_major"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/InputBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:padding="5dp">

            <Spinner
                android:id="@+id/select_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/major_list_default"
                android:scrollbarSize="4dp"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button"
            android:text="@string/confirm"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button_cancel"
            android:text="@string/cancel"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="18sp" />


</LinearLayout>