<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.acetering.app.ActivityPhonePlace">

    <TextView
        style="@style/common_text_label"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/tel_number"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        style="@style/InputBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/border_input_box"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_tel"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|top"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btn_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button"
            android:text="@string/query"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button_cancel"
            android:text="@string/cancel"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>