<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    style="@style/InputBoxStyle"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/border_input_box"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/stu_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:padding="5dp"
            app:srcCompat="@drawable/jobs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/gender_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:padding="2dp"
                app:srcCompat="@drawable/male" />

            <TextView
                android:id="@+id/stu_name"
                style="@style/common_text_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/label_stu_name"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_stu_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_stu_id"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/label_colleague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_stu_colleague"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/label_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_stu_major"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stu_id"
            style="@style/common_text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/label_stu_id"
            android:textAlignment="center"
            android:textColor="#242424"
            android:textColorHighlight="#00FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/stu_colleague"
            style="@style/common_text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/label_stu_colleague"
            android:textAlignment="center"
            android:textColor="#242424"
            android:textColorHighlight="#00FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/stu_major"
            style="@style/common_text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/label_stu_major"
            android:textAlignment="center"
            android:textColor="#242424"
            android:textColorHighlight="#00FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>